fix(components): subline alignment in no icon mode | mh |#1484

--- a/packages/components/src/components/action/button-pure/button-pure.scss
+++ b/packages/components/src/components/action/button-pure/button-pure.scss
@@ -216,7 +216,7 @@ $root: '.root';
   transition: color $p-animation-hover-duration-var $p-animation-hover-bezier;
   margin-top: p-px-to-rem(4px);
 
-  &::before {
+  #{$root}--with-icon + &::before {
     // We need a margin-left according to the labels font-size. The size of before gets calculated in the p-link-pure-size mixin
     content: '';
   }
